# uvb76-gen

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  cspell.json  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: index.md  license.md
scripts/: piper_tts.sh
src/uvb76_gen/: audio.py  broadcast.py  cli.py  crypto.py  errors.py  russian.py
tests/: test_roundtrip.py
