[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvb76-gen"
version = "0.1.0"
description = "UVB-76 style ciphered number-group generator (Python CLI) with optional FFmpeg audio rendering."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Necdet Şanlı" }]
keywords = [
  "numbers-station",
  "uvb-76",
  "uvb76",
  "cipher",
  "audio",
  "ffmpeg",
  "cli",
  "typer",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
]

dependencies = ["typer>=0.12.3", "rich>=13.7.1"]

[project.urls]
Homepage = "https://github.com/necdetsanli/uvb76-gen"
Repository = "https://github.com/necdetsanli/uvb76-gen"
Issues = "https://github.com/necdetsanli/uvb76-gen/issues"


[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.2",
  "ruff>=0.6.8",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.34",
  "mkdocstrings[python]>=0.26.2",
  "pre-commit>=3.8.0",
  "types-setuptools>=75.1.0.20240917",
  "build>=1.2.2",
  "twine>=5.1.1",
]
tts = ["piper-tts>=1.3.0"]

[project.scripts]
uvb76-gen = "uvb76_gen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/uvb76_gen"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.venv-smoke",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/dist",
  "/build",
  "/site",
  "/out",
  "/*.egg-info",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N", "D"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"src/uvb76_gen/__init__.py" = ["D104"]
"src/uvb76_gen/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]
